<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.delivery.setting.ui.home2.HomePage2ViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_light">

        <!-- Toolbar -->
        <com.delivery.core.utils.custom.ToolBarCommon
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:src_left="@drawable/ic_arrow_left"
            app:string_title="@string/segments_title" />

        <!-- Content Container -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <!-- Segments Title -->
            <TextView
                android:id="@+id/tvSegmentsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_24"
                android:layout_marginEnd="@dimen/dimen_16"
                android:text="@string/pending_segments_title"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Segments List -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSegments"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dimen_12"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/dimen_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSegmentsTitle"
                tools:itemCount="3"
                tools:listitem="@layout/item_segment" />

            <!-- Empty State -->
            <LinearLayout
                android:id="@+id/layoutEmptyState"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSegmentsTitle">

                <ImageView
                    android:layout_width="@dimen/dimen_120"
                    android:layout_height="@dimen/dimen_120"
                    android:src="@drawable/ic_empty_segments"
                    android:contentDescription="@string/empty_segments_description"
                    android:alpha="0.5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:text="@string/no_segments_available"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/text_size_16"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:text="@string/no_segments_description"
                    android:textColor="@color/text_tertiary"
                    android:textSize="@dimen/text_size_14"
                    android:textAlignment="center" />

            </LinearLayout>

            <!-- Loading Indicator -->
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSegmentsTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
